# edge-tab-group-shortcut

./: .gitignore  Makefile  README.md  background.js  manifest.json
ahk-script/: EdgeTabGroupAHK.ahk
hover-detector/: Cargo.toml  test-hover.cmd
hover-detector/src/: main.rs
native-host/: Cargo.toml  test_native_host.js
native-host/src/: main.rs
