[package]
name = "hover-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_HiDpi"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
xcap = "0.3.1"
image = { version = "0.25", default-features = false, features = ["png"] }
active-win-pos-rs = "0.9.0"
